--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ button {
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
     transition: var(--lavendel);
-    color: text;
+    
 }
 
 
@@ -158,7 +158,7 @@ footer {
 }
 
 footer .footer-nav {
-    background-color: var(--light-lavender)
+    background-color: var(--light-lavender);
     padding-top: 48px;
     padding:16px;
 }
