--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,14 @@ h2 {
    font-family: "Montserrat", sans-serif;
 }
 
+h3{
+    font-size: 18px;
+    font-family: "Montserrat", sans-serif;
+    font-weight:normal;
+    padding-top: 30px;
+    line-height: 29px;
+}
+
 a {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
@@ -58,7 +66,7 @@ li:hover{
 button {
     padding: 5px 15px;
     margin-left: 7px;
-    background-color: #f8f8f8;
+    background-color:var(--bg-light);
     border-radius: 50px;
     border-style: none;
     font-family: "Montserrat", sans-serif;
@@ -123,7 +131,7 @@ input:hover {
     text-align: left;
     position: absolute;
     width: 100%;
-    color: black;
+    color: var(--text);
     height: auto;
     margin-top: 200px;
 }
@@ -148,6 +156,20 @@ input:hover {
 .button:hover{
     background-color: var(--text);
     color: var(--lavendel)
+}
+
+/* Schwerpunkte */
+
+.schwerpunkte {
+    text-align: center;
+    position:relative;
+    width: 100%;
+    color: var(--text);
+    height: auto;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: var(--bg-light);
+    
 }
 
 /* FOOTER BEREICH */
