--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ header {
 }
 
 a:link {
-    color: var(--bright-orange);
+    color: var(--text);
 }
 
 a:visited{
@@ -90,7 +90,7 @@ a:visited{
 }
 
 a:active {
-    color: var(--lavendel);
+    color: var(--text);
 }
 
 a:hover {
@@ -122,22 +122,20 @@ input:hover {
     color: var(--text);
 }
 
-button {
-    padding: 5px 15px;
-    margin-left: 7px;
-    background-color:var(--bg-light);
-    border-radius: 50px;
-    border-style: none;
-    font-family: "Montserrat", sans-serif;
-    font-size: 16px;
-    transition: var(--lavendel);
-    
+.suche-icon {
+    background-image: url(suche-icon.svg);
+    background-size: 100% auto;
+    color: transparent;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
 }
 
-/* CONTENT BEREICH */
+
+/* CONTENT BEREICH HOME*/
 
 .heroteaser {
-    background-image:url(../simplified-setup/img/heroteaser3.svg);
+    background-image: url(heroteaser3.svg);
     width:auto;
     height: 600px;
     background-position: center;
@@ -378,4 +376,17 @@ footer .logo{
     margin-right: auto;
     width: 70%;
     padding-top: 80px;
+}
+
+/* Suchergebnisse */
+.suchergebnisse {
+    text-align: center;
+    position:relative;
+    width: 100%;
+    color: var(--text);
+    height: auto;
+    padding-top: 100px;
+    padding-bottom: 30px;
+    background-color: var(--muted-yellow);
+    padding-bottom: 80px;
 }
