--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,9 @@ a:active {
 a:hover {
     color: var(--lavendel);
 }
+
 header .logo {
-    cursor: pointer;
+    cursor:none;
     margin-right: auto;
     width: 15%;
 }
@@ -123,14 +124,10 @@ input:hover {
 }
 
 .suche-icon {
-    background-image: url(suche-icon.svg);
-    background-size: 100% auto;
-    color: transparent;
     width: 20px;
-    height: 20px;
+    height: 21px;
     display: inline-block;
 }
-
 
 /* CONTENT BEREICH HOME*/
 
@@ -262,6 +259,46 @@ input:hover {
 .teaser-cards .card .card-inhalt-überschrift a:hover{
     background-color: var(--bright-orange);
     color: var(--muted-yellow);
+}
+
+/* Letzten Projekte */
+
+.letzten-projekte {
+    position: relative;
+    width: auto;
+    padding-top: 0px;
+    padding-bottom:90px;
+    display: flex;
+    justify-content:left;
+    align-items:center;
+    flex-wrap: wrap;
+    background-color: var(--bg-light);
+}
+
+.meine-projekte {
+    margin-left: 150px;
+    text-align: left;
+    width: 30%;
+}
+
+.letzten-projekte .bild1 {
+    background-image: url(bild5.jpg);
+    width: 339px;
+    height: 554px;
+    background-position:center;
+    background-repeat: no-repeat;
+    margin-left: 30px;
+}
+
+.letzten-projekte .bild2 {
+    background-image: url(bild2.jpg);
+    width: 459px;
+    height: 554px;
+    background-position:right;
+    background-repeat: no-repeat;
+    background-size:auto;
+    position: relative;
+    margin-left: 30px;
 }
 
 /* Kontaktaufnahme */
